# Marker-Base-Teaching

./: README.md
marker_base_teaching-master/: CMakeLists.txt  package.xml
marker_base_teaching-master/config/: camera_info.yaml
marker_base_teaching-master/kinect_retrieve_saves/: tracking_Data.yml
marker_base_teaching-master/launch/: kinect_live_estimation.launch  single_pose_estimation.launch
marker_base_teaching-master/msg/: markers.msg
marker_base_teaching-master/scripts/: Datamanagement back1.py  Datamanagement no case 3.py  Datamanagement.py  Datamanagement_change_postion.py  kinect_calibration.py  kinect_openrave.py  kinect_tracking back2.py  kinect_tracking change_position.py  kinect_tracking.py  kinect_tracking_back1.py  testing.py
marker_base_teaching-master/src/: ConfigFile.cpp  data_manager change_postion.cpp  data_manager.cpp  kinect_pose_estimation change_postion.cpp  kinect_pose_estimation.cpp  kinect_retrieve.cpp  single_pose_estimation.cpp  testing.cpp
